<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">VxploShow</string>
    <string name="latest_version_title">新版本更新可用(%1$s)</string>
    <string name="update_latest_version_title">Latest version available(%1$s), updating…</string>
    <string name="later_on_wifi">Auto Update later when on wifi</string>
    <string name="update_content">更新内容：\n%1$s</string>
    <string name="do_it_later">稍后再说</string>
    <string name="update_now">立即升级</string>
    <string name="downloading_update">正在下载更新</string>

    
    <string name="file_upload_start">文件开始上传</string>
    <string name="file_uploading">文件上传中...</string>
    <string name="file_upload_finished">文件上传完成</string>
    <string name="file_upload_failed">文件上传失败</string>
    <string name="has_finished">已完成:%1$d/%1$d</string>
    <string name="qrcode_tips">请将二维码放入框内，即可自动扫描</string>
    <string name="waiting_for_upload">上传等待中</string>
    <string name="waiting_upload_last">新任务上传等待中，剩余：</string>
    <string name="mobile_network_tips">当前使用手机流量，是否仍然上传</string>

    <!-- login -->
    <string name="login_hint_umail">E-mail:</string>
    <string name="login_hint_upass">Password:</string>
    <string name="btn_login">Log in</string>
    <string name="btn_sign_up">Sign up</string>
    <string name="alert_empty">Email and password should not be empty.</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="action_settings">Settings</string>
    <string name="skip">skip</string>
    <string name="failed_connect">访问服务器失败</string>
    

    <!-- base -->
    <string name="dialog_title_info">Information</string>
    <string name="OK">OK</string>
    <string name="loading_str">loading...</string>
    <string name="removeItem">Delete</string>
    <string name="success">Success</string>
    <string name="delete">删除</string>

    <!-- dialog -->
    <string name="title_send">Send project</string>
    <string name="title_setting">Setting project</string>
    <string name="title_report">Report</string>
    <string name="project_name">Project name:</string>
    <string name="hint_report">Report content:</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="hello_world">Hello world!</string>

    <!-- sign up -->
    <string name="login_hint_uname">Name:</string>
    <string name="sign_up_accept">accept vxplo\'s user terms</string>
    <string name="signup_alert_empty">Email, Name and Password should not be empty</string>
    <string name="forget_alert_empty">Email should not be empty</string>
    <string name="sign_up_wrong_email">Email should not be empty</string>

    <!-- left frag -->
    <string name="left_btn_ins">Get Inspired</string>
    <string name="left_btn_proj">My Projects</string>
    <string name="left_btn_fav">My Favorites</string>
    <string name="left_btn_log_out">Log out</string>

    <!-- main -->
    <string name="takevideo_now">录制视频</string>
    <string name="takephoto_now">拍照上传</string>
    <string name="video_phone">从本机选择视频</string>
    <string name="picture_phone">从本机选择图片</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="no_network">没有网络连接</string>
    <string name="uploading_tip">文件上传任务正在进行中，是否退出程序</string>
    <string name="exit_app">退出程序</string>
    <string name="refresh">刷新</string>
    <string name="check_update">检查更新</string>
    <string name="click_again_to_exit">再按一次返回键退出程序</string>

    <!-- record -->
    <string name="title_activity_record">我的录音</string>
    <string name="click_record">点击开始录音</string>
    <string name="record_converting">正在处理中...</string>
    <string name="click_stop">点击结束录音</string>
    <string name="record_name">录音名：\n%1$s</string>
    <string name="no_sdcard_tip">未检测到SD卡，请插入SD卡后使用</string>

    <!-- richtext -->
    <string name="rich_ok">上传</string>
    <string name="title_activity_rich_text">文本编辑</string>
    <string name="please_type_something">请输入有效的文本</string>
    <string name="text_empty_type_some">当前输入的文本为空，请输入内容后再上传</string>

    <!-- album -->
    <string name="title_activity_album">选择图片</string>
    <string name="title_activity_project_show">ProjectShowActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="done">完成</string>
    <string name="tips">温馨提示</string>
    <string name="photo_uploaded">该图片已经上传</string>
    <string name="piv_exist_message">图片已经上传过，是否任然上传</string>
    <string name="upload_though">仍然上传</string>

    <!-- show -->
    <string name="alert_title">提示</string>
    <string name="title_activity_share">上传到VXPLO</string>
    <string name="rotate">转屏</string>
    <string name="share">分享</string>
    <string name="saoyisao">扫一扫</string>
    <string name="send_to_wechat_friends">发送给微信好友</string>
    <string name="share_to_timeline">分享到朋友圈</string>
    <string name="title_activity_wxentry">WXEntryActivity</string>

    <!-- history -->
    <string name="title_activity_history">上传记录</string>
    <string name="no_upload_history">还没有上传记录</string>
    <string name="title_activity_video_confirm">VideoConfirmActivity</string>
    <string name="clean_videos">清空文件</string>
    <string name="videos">视频</string>
    <string name="images">图片</string>
    <string name="audios">录音</string>
    
    <!-- camera -->
    <string name="title_activity_camera">CameraActivity</string>
    <string name="capture">摄像</string>
    <string name="stop">停止</string>
    <string name="predict_maxtime">预计最大时长：20秒</string>

</resources>
