<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/pop_bg"
    android:background="@color/transparent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="12dip"
        android:background="#a5555555"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:orientation="vertical" >
        
        <Button
            android:id="@+id/take_picture_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/overlay_btn_selector"
            android:textColor="@color/vx_red"
            android:textStyle="bold"
            android:text="@string/takephoto_now"/>
        
        <Button
            android:id="@+id/take_video_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/overlay_btn_selector"
            android:textColor="@color/vx_red"
            android:textStyle="bold"
            android:text="@string/takevideo_now"/>
        
        <Button
            android:id="@+id/sel_picture_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/overlay_btn_selector"
            android:textColor="@color/yellow"
            android:textStyle="bold"
            android:text="@string/picture_phone"/>
        
        <Button
            android:id="@+id/sel_video_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/overlay_btn_selector"
            android:textColor="@color/yellow"
            android:textStyle="bold"
            android:text="@string/video_phone"/>

        <Button
            android:id="@+id/cancleButton"
            android:layout_marginTop="15dip"
            android:layout_marginBottom="5dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/overlay_btn_selector"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="@string/cancel" />
    </LinearLayout>

</RelativeLayout>