<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fasongkuang"
    android:orientation="vertical"
    android:paddingLeft="8dp"
    android:paddingRight="8dp" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="48dp" >

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"
            android:layout_centerVertical="true" />
        
        <ImageButton 
            android:id="@+id/close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:layout_centerVertical="true"
            android:src="@drawable/selector_btn_close"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp" />
        
    </RelativeLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">
  
        <EditText
            android:id="@+id/edit_umail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/shurukuang"
            android:hint="@string/login_hint_umail"
            android:textSize="16sp"
            android:inputType="text"
            android:textColor="@android:color/white"
            android:textCursorDrawable="@drawable/tiao1" />

        <EditText
            android:id="@+id/edit_upass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/shurukuang"
            android:hint="@string/login_hint_upass"
            android:textSize="16sp"
            android:inputType="textPassword"
            android:textColor="@android:color/white"
            android:textCursorDrawable="@drawable/tiao1" />
        
        
        <Button 
            android:id="@+id/btn_send"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/btn_login"
            android:background="@drawable/selector_btn_login" />
        
    </LinearLayout>

</LinearLayout>